--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-boot.version>1.4.0.M2</spring-boot.version>
+        <webjars.jquery.version>2.2.3</webjars.jquery.version>
+        <webjars.bootstrap.version>3.3.6</webjars.bootstrap.version>
         <assertj.version>3.4.1</assertj.version>
     </properties>
 
